Trying to resolve lag reported. Also started using jQuery Backstretch

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -17,6 +17,10 @@ html, body{
     font-family: 'Roboto', sans-serif;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 .center{
     text-align: center;
 }
