--- a/src/stylus/styles/center_introduction.styl
+++ b/src/stylus/styles/center_introduction.styl
@@ -91,10 +91,6 @@
 .imageBackground{
   height: 100%;
   width: 100%;
-  background: url("/dist/img/MountainSea.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
 }
 
 .shade{
