--- a/src/stylus/styles/projects.styl
+++ b/src/stylus/styles/projects.styl
@@ -10,10 +10,6 @@
 }
 
 .projectsBackground{
-  background-image: url("/dist/img/Alley.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
 
   height: 100%;
   width: 100%;
